--- a/css/homepage.css
+++ b/css/homepage.css
@@ -18,10 +18,10 @@ header{
     grid-template-columns: auto 2fr 4rem 8rem 5rem;
 }
 #logo{
-    width: 6rem;
+    width: 7rem;
 }
 #searchlogo{
-    width: 1.5rem;
+    width: 1.25rem;
     
 }
 .searchlogo{
@@ -39,6 +39,7 @@ header{
     color:white;
     font-weight: 600;
     border-radius: 6px;
+    height: 2.5rem;
 }
 .hamburger{
     display: flex;
@@ -49,7 +50,40 @@ header{
 #hamburg{
     width: 1.5rem;
 }
+
+main{
+    margin-top: 1.9rem;
+}
+
 .main-button{
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 18px;
+}
+.main-button p{
+    padding: 0 13rem 0 13rem;
+    font-size: 18px;
+    text-align: center;
+
+}
+
+.main-button a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:rgb(80, 4, 80) ;
+    color: white;
+    width: 40%;
+    height: 50px;
+    text-decoration: none;
+    font-weight: 700;
+    border-radius: 4px;
+
+}
+.main-button a+a{
+    background-color: white;
+    color:rgb(80, 4, 80);
+    border: 1.5px solid rgb(80, 4, 80);
 }
