--- a/css/homepage.css
+++ b/css/homepage.css
@@ -3,6 +3,7 @@
 :root{
     --fontbody:"Salesforce Sans";
     --fontheading:"Salesforce-Avant-Garde", system-ui, -apple-system;
+    --maincolor:#611f69;
 }
 *{
     font-family: var(--fontbody);
@@ -26,7 +27,7 @@ h1{
     font-weight:620;
 }
 #logo{
-    width: 7rem;
+    width: 6rem;
 }
 #searchlogo{
     width: 1.25rem;
@@ -43,7 +44,7 @@ h1{
     justify-content: center;
     align-items: center;
     grid-column-start: 4;
-    background-color: rgb(80, 4, 80);
+    background-color: var(--maincolor);
     color:white;
     font-weight: 600;
     border-radius: 6px;
@@ -76,7 +77,7 @@ main{
     gap: 18px;
 }
 .main-button p{
-    padding: 0 30vw;
+    padding: 0 29vw;
     font-size: 18px;
     text-align: center;
     margin-bottom: 0.45rem;
@@ -89,7 +90,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:rgb(80, 4, 80) ;
+    background-color:var(--maincolor) ;
     color: white;
     width: 40%;
     height: 3.75rem;
@@ -100,15 +101,15 @@ main{
 }
 .main-button a+a{
     background-color: white;
-    color:rgb(80, 4, 80);
-    border: 1.5px solid rgb(80, 4, 80);
+    color:var(--maincolor);
+    border: 1.5px solid var(--maincolor);
 }
 
 .main-connect{
     display: flex;
     flex-flow: row wrap;
-    margin-top:2.5rem;
-    margin-bottom:2.5rem;
+    margin-top:2rem;
+    margin-bottom:2rem;
     justify-content: center;
     align-items: center;
     width: 40%;
@@ -127,8 +128,9 @@ main{
     width: 100%;
 }
 .main-content .discussing{
-    width: 80%;
+    width: 85%;
     border-radius: 8px;
+    box-shadow: 0 0 .8rem #0000001a;
     
 }
 .main-content .arc{
