--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,5 +1,8 @@
 @import url(https://db.onlinewebfonts.com/c/0fadaa21fcac88ceee0bb8da992c221b?family=Salesforce+Sans);
-
+@font-face {
+  font-family: "Salesforce-Avant-Garde";
+  src: url(../assets/fonts/AVGARDD_2.TTF);
+}
 :root {
   --fontbody: 'Salesforce Sans';
   --fontheading: 'Salesforce-Avant-Garde', system-ui, -apple-system;
@@ -17,14 +20,15 @@ header {
   width: 100%;
   display: grid;
   padding: 1rem;
-  grid-template-columns: auto 2fr 4rem 8rem 5rem;
+  grid-template-columns: auto 2fr 4rem 0rem 5rem;
 }
 h1 {
-  letter-spacing: -0.256px;
+  letter-spacing: -.256px;
   font-size: 2rem;
   line-height: 2.5rem;
   font-family: var(--fontheading);
-  font-weight: 620;
+  
+  
 }
 #logo {
   width: 6rem;
@@ -48,6 +52,8 @@ h1 {
   font-weight: 600;
   border-radius: 6px;
   height: 2.5rem;
+  display: none;
+  visibility: hidden;
 }
 .hamburger {
   display: flex;
@@ -86,6 +92,7 @@ main {
   letter-spacing: -0.004em;
   font-size: 1.125rem;
   line-height: 1.555;
+  padding: 0 8vw;
 }
 
 .main-button a {
@@ -161,6 +168,10 @@ main {
 .main-content .bg .headline h1 {
   text-align: center;
   margin-bottom: 3.125rem;
+  margin-top: 3.9rem;
+  font-weight: 700;
+  padding: 0 2rem 0 2rem;
+  text-align: center;
 }
 .main-connect .bg .collab h1 {
   text-align: center;
@@ -206,6 +217,7 @@ main {
   font-size: 3.125rem;
   line-height: 1.25;
   font-weight: 700;
+  
 }
 .main-video {
   width: 97.5%;
@@ -254,6 +266,9 @@ main {
 .slackai h1{
     margin-right: auto;
 }
+.slackai .fortune h1{
+  min-width: 11rem;
+}
 .card{
     display: flex;
     flex-direction: column;
@@ -264,4 +279,6 @@ main {
     box-shadow: 0 5px 20px #0000001a;
     border-radius: 1rem;
 }
-
+div h1{
+  margin-bottom: 0
+}
