--- a/css/homepage.css
+++ b/css/homepage.css
@@ -19,8 +19,9 @@ body {
 header {
   width: 100%;
   display: grid;
-  padding: 1rem;
-  grid-template-columns: auto 2fr 4rem 0rem 5rem;
+  padding: 1rem 0 1rem 0;
+  grid-template-columns: auto 2fr 4rem 0rem 4rem;
+  overflow:hidden;
 }
 h1 {
   letter-spacing: -0.256px;
@@ -37,9 +38,11 @@ a {
 }
 #logo {
   width: 6rem;
+  padding-left: 1rem;
 }
 #searchlogo {
   width: 1.25rem;
+
 }
 .searchlogo {
   display: flex;
@@ -64,7 +67,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-right: 20px;
+  
 }
 #hamburg {
   width: 1.5rem;
@@ -311,7 +314,7 @@ div h1 {
 .packages-container {
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: repeat(auto-fill, 19.75rem);
+  grid-template-columns: repeat(auto-fill, 1fr);
   grid-template-rows: repeat(auto-fill,1fr);
   justify-content: center;
   padding: 1rem;
@@ -320,9 +323,11 @@ div h1 {
   border: 1px solid #d3d3d3;
   border-radius: 0.5rem;
   flex-direction: column;
-  padding: 1em;
+  padding: 1rem;
   display: flex;
   margin: .5rem;
+  margin-left: 0rem;
+  margin-right: 0rem;
   
 }
 .packages h2 {
@@ -380,5 +385,29 @@ div h1 {
     font-size: .65rem;
 }
 
+.lower-button {
+  display: flex;
+  flex-direction: column;
+  gap:1rem;
+  width: 100%;
+  text-align: center;
+  color:white;
+}
 
+.lower-button a{
+  background-color: var(--maincolor);
+  padding: 1rem;
+  color: #fff;
+  fill: #fff;
+  border: none;
+  border-radius: 4px;
+  font-weight: 500;
+}
+
+.lower-button a+a{
+  background-color: white;
+  color: var(--maincolor);
+  border-color:var(--maincolor) ;
+  border: 1px solid #611f69;
+}
 
