--- a/css/homepage.css
+++ b/css/homepage.css
@@ -15,6 +15,7 @@
 }
 body {
   margin: 0;
+  width: 100%;
 }
 header {
   width: 100%;
@@ -141,6 +142,7 @@ main {
   align-items: center;
   margin-top: 1rem;
   width: 100%;
+  z-index: 0;
 }
 .main-content .discussing-video {
   width: 85%;
@@ -392,16 +394,29 @@ div h1 {
   width: 100%;
   text-align: center;
   color:white;
+  height: 8rem;
+  padding-left: 1.625rem;
+  padding-right: 1.625rem;
 }
 
 .lower-button a{
   background-color: var(--maincolor);
   padding: 1rem;
+  padding-top: 1.125rem;
+  padding-bottom: 1.125rem;
   color: #fff;
   fill: #fff;
   border: none;
   border-radius: 4px;
-  font-weight: 500;
+  font-size: .875rem;
+  font-weight: 700;
+  line-height: 1.286;
+  transition: box-shadow .42s cubic-bezier(.165,.84,.44,1),color .42s cubic-bezier(.165,.84,.44,1),background .42s cubic-bezier(.165,.84,.44,1);
+}
+.lower-button a:hover{
+  cursor:pointer;
+  z-index: 2;
+  background-color: #45144b;
 }
 
 .lower-button a+a{
@@ -409,5 +424,32 @@ div h1 {
   color: var(--maincolor);
   border-color:var(--maincolor) ;
   border: 1px solid #611f69;
+  letter-spacing: .057em;
 }
+.lower-button a+a:hover{
+  border: 1.75px solid #611f69;
+  background-color: white;
+}
+.lower-arc {
+  clip-path: ellipse(80% 200% at 50% -105%);
+    height: 5rem;
+    margin-bottom: -5rem;
+    background-color: white;
+    z-index:1;
+    margin-bottom: 9rem;
+}
+.bg2{
+  background-color: #45144b;
+  color:white;
+  width: fit-content
+  padding: 0 4vw;
+  z-index: -1;
 
+}
+.bg2-quote h1{
+  color: #fff;
+    text-align: center;
+    font-size: 2.25rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
