--- a/css/homepage.css
+++ b/css/homepage.css
@@ -563,3 +563,79 @@ div h1 {
 .bg3-swiper-wrapper .card{
   background-color: #45144b;
 }
+
+.bg3-info{
+  font-size: .875rem;
+  color: gray;
+  text-align: left;
+  padding-top: 4rem;
+  padding: 0 2vh;
+  font-family: var(--fontbody);
+  padding-bottom: 3rem;
+}
+.bg3-info div{
+  font-size: .875rem;
+  margin: 0;
+  display: block;
+}
+.bg3-info sup{
+  font-size: .875rem;
+}
+
+.bg4{
+  background-color: #45144b;
+  color:white;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items:center;
+  padding-top: 4rem;
+}
+.bg4-getstart{
+  padding: 0 2.75vh;
+  text-align: center;
+  padding-bottom: 1rem;
+  
+}
+.bg4-getstart h1{
+  letter-spacing: -.012em;
+  line-height: 1.12;
+}
+#lowerlower {
+  margin-top: 2rem;
+  
+}
+#getstarted{
+  background-color: white;
+  color: #45144b;
+}
+#talkto {
+  background-color: #45144b;
+  border-color: white;
+  color: white;
+}
+#lowerlower a{
+  font-size: .875rem;
+  margin: 0;
+}
+#lower-arc-purple{
+  background-color: #45144b;
+  width: 100%;
+  margin-bottom: 3rem;
+}
+.bg5{
+  display: flex;
+  flex-direction: column;
+}
+.bg5-region{
+  display: flex;
+
+}
+.bg5-region p{
+  margin: 0;
+}
+#globe{
+  top: 2px;
+  position: relative;
+}
