--- a/css/homepage.css
+++ b/css/homepage.css
@@ -25,7 +25,9 @@ header {
   display: grid;
   padding-top: .5rem;
   padding-bottom: .5rem;
-  grid-template-columns: auto 2fr 4rem 0rem 4rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  grid-template-columns: auto 2fr 4rem 4rem;
   overflow:hidden;
   top:0;
   position: sticky;
@@ -186,9 +188,11 @@ main {
   z-index: 0;
 }
 .main-content .discussing-video {
-  width: 85%;
+  width: 75%;
+  
   border-radius: 8px;
   box-shadow: 0 0 0.8rem #0000001a;
+  
 }
 .main-content .arc {
   clip-path: ellipse(80% 200% at 50% 200%);
@@ -989,6 +993,28 @@ div h1 {
 .collab-head{
   flex-direction: column;
 }
+.desktop-video{
+  display: none;
+}
+#talkto{
+  display: none;
+}
+#searchlogo+a{
+  display: none;
+}
+header a{
+  display: none;
+}
+#searchlogo {
+  display: block;
+}
+.hamburger a{
+  display: block;
+}
+.button-container a span{
+    padding-left: .5rem;
+    display: none;
+  }
 
 
 @media screen and (min-width:1024px) {
@@ -1007,27 +1033,45 @@ div h1 {
     align-items: center ;
   }
   header{
-    grid-template-columns: auto 2fr 4rem  4rem 8rem;
+    top:.25rem;
+    grid-template-columns: auto 2fr 4rem  4rem auto auto;
     box-shadow: none;
     background-color: white;
     border-bottom: none;
     position: sticky;
-    width: 90%;
-    border-radius: 1rem;
+    width: fit-content;
+    border-radius: 1.25rem;
+    width: 96%;
+    
   }
+  
+  #talkto{
+    background-color: white;
+    color: #611f69;
+    
+    font-size: .875rem; 
+    font-weight: 700;
+    line-height: 1.286;
+    letter-spacing:.057em;
+  }
+  
+  
   .hamburger{
     display: none;
   }
   .header-nav{
+    
     display: flex;
-    padding-left:1.5rem;
-    gap: 1rem;
+    padding-left:4rem;
+    gap: 2.5rem;
     align-items: center;
+    text-align: center;
   }
   .header-nav p{
     color:#1d1d1d;
     font-weight: 700;
-    font-size: .8rem;
+    font-size: 1rem;
+    
   }
   #signin{
     display: block;
@@ -1035,7 +1079,8 @@ div h1 {
     justify-content: center;
     align-items: center;
     font-weight: 700;
-    color:black
+    color:black;
+    font-size: .9375rem;
   }
   #logo{
     position: relative;
@@ -1045,18 +1090,56 @@ div h1 {
     display: block;
   }
   .getStarted{
-    padding: .5rem;
     text-align: center;
-    display: flex;
+    font-size: .875rem; 
+    font-weight: 700;
+    line-height: 1.286;
+    letter-spacing:.057em;
+    height:fit-content;
+    padding: .75rem 1rem;
+    border:1px solid #611f69;
+  }
+  #talkto{
+    display: block;
+    border:1px solid #611f69;
+    margin: 0 20px;
+  }
+  header a {
+    display: block;
   }
   .main-button p{
+    width: 53%;
+    letter-spacing: -.004em;
+    font-size: 1.125rem;
+    line-height: 1.555;
+    font-weight: unset;
+  }
+  .main-connect {
+    gap: 12.5rem;
+    min-width: 85%;
+  }
+  .button-container{
+    flex-direction: row;
+    max-width: 23rem;
+  }
+  .button-container a span{
+    padding-left: .5rem;
+    display: block;
+  }
+  .headline {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .headline h1{
     width: 45%;
   }
-  .main-connect{
-    gap: 5rem;
-  }
   .main{
-    padding: 0 1rem;
+   padding: 10rem 1rem;
+  }
+  
+  .desktop{
+    padding-top: 10rem;
   }
   .main-content .bg .headline h1{
     padding: 0 7rem;
@@ -1070,13 +1153,63 @@ div h1 {
     margin: 0 auto;
     gap: 1.25rem;
     margin-bottom: 8rem;
+    letter-spacing: .057em;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+    
+    font-weight: 700;
+    line-height: 1.286;
+    text-decoration: none;
+  }
+
+  .main-content .arc{
+    clip-path: ellipse(70% 200% at 50% 200%);
+    height: 8rem;
   }
   .desktop video{
     display: none;
   }
+  .desktop .collab,.project,.integrations,.slackai{
+    padding-left: 6rem;
+    padding-right: 6rem;
+    margin-bottom: 24rem;
+  }
+  .video{
+   
+  }
+  #vid3{
+    margin-bottom: 17rem;
+  }
+  #vid4{
+    margin-bottom: 0rem;
+  }
+  #vidbg{
+    position:absolute;
+    top: 8rem;
+    left: 65rem;
+    z-index: -1;
+    transition: fill 0.3s;
+  }
+  #vidbg path{
+    width: 540;
+    height: 540;
+    }
+  }
   .main {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap:10rem;
+
+  }
+  .video {
+    padding-top: 8rem;
+  }
+  .video video{
+    border-radius: .5rem;
+    max-width: 550px;
+    position: relative;
+    top:1rem;
+    margin-bottom: 20rem;
   }
   .video-container{
     display: flex;
@@ -1096,9 +1229,15 @@ div h1 {
     flex-direction: row;
   
   }
-  .collab-head{
+  #bluecard{
     flex-direction: column;
-    gap: 1rem;
+    gap:1rem;
+    justify-content: center;
+    padding: 0 2rem;
+  }
+  .collab-head{
+    flex-direction: row;
+    
     justify-content: center;
   }
   .collab-head h1{
@@ -1138,13 +1277,14 @@ div h1 {
   .desktop{
     margin-bottom: 10rem
   }
-  .desktop .collabs{
+  .desktop-des .collabs{
     letter-spacing: .057em;
     text-transform: uppercase;
-    font-size: .875rem;
     font-weight: 700;
     line-height: 1.286;
+    font-size: .875rem;
   }
+  
   .fortune {
     flex-direction: row;
     align-items: center; 
@@ -1202,6 +1342,6 @@ div h1 {
   }
   .packages-container{
     display: flex;
-    
+
   }
 }
