--- a/css/homepage.css
+++ b/css/homepage.css
@@ -996,9 +996,7 @@ div h1 {
 .desktop-video{
   display: none;
 }
-#talkto{
-  display: none;
-}
+
 #searchlogo+a{
   display: none;
 }
@@ -1052,6 +1050,9 @@ header a{
 .bg5-desktop-info{
   width: 100%;
 }
+#vidbg{
+  display: none;
+}
 @media screen and (min-width:1024px) {
   @keyframes slide-in--down {
     0% {
@@ -1069,22 +1070,23 @@ header a{
     align-items: center ;
   }
   header{
-    top:.25rem;
+    top:.5rem;
     grid-template-columns: auto 2fr 4rem  4rem auto auto;
     box-shadow: none;
     background-color: white;
     border-bottom: none;
     position: sticky;
     width: fit-content;
-    border-radius: 1.25rem;
-    width: 96%;
-    
+    box-shadow: 0 4px 40px #00000014;
+    width: 75%;
+    border-radius: 50px;
+    min-width: 62rem;
+    padding: 1rem;
   }
   
   #talkto{
     background-color: white;
     color: #611f69;
-    
     font-size: .875rem; 
     font-weight: 700;
     line-height: 1.286;
@@ -1151,8 +1153,14 @@ header a{
     font-weight: unset;
   }
   .main-connect {
-    gap: 12.5rem;
+    
     min-width: 90%;
+  }
+  .main-connect img{
+    margin-right: 5rem;
+  }
+  .main-connect img:first-child{
+    margin-left: 5rem;
   }
   .button-container{
     flex-direction: row;
@@ -1213,18 +1221,7 @@ header a{
     margin-bottom: 24rem;
   }
   
-  
-  #vid3{
-    margin-bottom: 17rem;
-  }
-  #vid4{
-    margin-bottom: 0rem;
-  }
-  #vidbg{
-    
-    z-index: -1;
-    transition: fill 0.3s;
-  }
+ 
   #vidbg path{
     width: 540;
     height: 540;
@@ -1239,13 +1236,15 @@ header a{
     display: flex;
     flex-direction: column;
     padding-top: 8rem;
+    
   }
   .video video{
     border-radius: .5rem;
     max-width: 550px;
     position: relative;
     top:1rem;
-    margin-bottom: 20rem;
+    margin-bottom: 17rem;
+    
   }
   .video-container{
     display: flex;
@@ -1257,11 +1256,13 @@ header a{
   }
   .slackvideo{
     width: 95%;
-    height: 95%;
+    
     display: flex;
+    border-radius: .5rem;
+
   }
   .card{
-    margin: 0 4rem;
+    margin: 0 10rem;
     flex-direction: row;
   
   }
@@ -1293,7 +1294,7 @@ header a{
     margin-right: 1rem;
   }
   .wherework{
-    width: 100%
+    width: 60%
   }
   .desktop-video-hover{
     width: 100%;
@@ -1370,7 +1371,6 @@ header a{
     transition: width .65s;
     padding: 1.5rem;
     color:white;
-    
   }
   .little-card img:first-child{
     margin-top: 6rem;
@@ -1399,6 +1399,7 @@ header a{
   .little-content img{
     width: 90px;
     height: 90px;
+    
   }
   
   #li1 {
@@ -1618,4 +1619,81 @@ header a{
   .main-content .discussing-video{
     width: 50%;
   }
+  .video-sroller{
+    position: relative;
+    display: block;
+    min-height: 200vh;
+  }
+  
+#vidbg {
+  position: absolute;
+  display: block;
+  left: 40%;
+  z-index: -1;
+  transition:top 0.3s;
+  pointer-events: none;
+}
+#vidbg path{
+  transition: fill 0.3s;
+}
+.video video {
+  opacity: 0;
+  transform: translateY(60px) scale(0.96);
+  transition: opacity 0.7s cubic-bezier(.4,0,.2,1), transform 0.7s cubic-bezier(.4,0,.2,1);
+  will-change: opacity, transform;
+  position: relative;
+  z-index: 1;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 17rem;
+  left: -5rem;
+  
+}
+#vid1{
+  margin-bottom:18rem;
+}
+#vid3{
+  margin-bottom: 19rem;
+}
+.slackai{
+  margin-bottom: 0;
+}
+#vid4{
+  margin-bottom: 0;
+}
+.main{
+  margin-bottom: 7.5rem;
+}
+.video{
+    position: relative;
+    
+  }
+.video video.visible {
+  opacity: 1;
+  transform: translateY(0) scale(1);
+  z-index: 2;
+  margin-bottom: 20rem;
+}
+
+.video video.disappear {
+  opacity: 0;
+  transform: translateY(-60px) scale(0.96);
+  z-index: 0;
+}
+.quote{
+  margin-top: 8rem;
+}
+.quote h1{
+  font-size: 3.125rem;
+}
+#talkto{
+  background-color: #45144b;
+  border-color: white;
+  color: white;
+}
+header a #talkto{
+  color: #611f69;
+  background-color: white;
+  border:1px solid #611f69;
+}
 } 
