--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1651,10 +1651,13 @@ header a{
   
 }
 #vid1{
-  margin-bottom:18rem;
+  margin-bottom:20rem;
+}
+#vid2{
+  margin-bottom: 22rem;
 }
 #vid3{
-  margin-bottom: 19rem;
+  margin-bottom:19rem;
 }
 .slackai{
   margin-bottom: 0;
@@ -1701,5 +1704,9 @@ header a #talkto{
 .desktop div .collab-head+h1{
   width: 440px;
   margin-bottom: 1rem;
+}
+.bg5{
+  display: flex;
+  width: 89%;  
 }
 } 
